--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,7 +62,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=info.ata4.minecraft.muscode.MusCode
+main.class=info.ata4.minecraft.muscode.MusCodeCli
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
